# xi

./: .clang-format  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  travis.yml
cmake/modules/: Coveralls.cmake  CoverallsGenerateGcov.cmake  FindJeMalloc.cmake
src/: CMakeLists.txt
src/async/: Async.h  CMakeLists.txt  Context.h  Engine.h  Event.h  EventHandler.cpp  EventHandler.h  Executor.h  ExecutorGroup.h  FreeStoreTask.h  Future.h  Latch.h  Reactor.h  ReactorService.h  Task.h  TaskQueue.h  ThreadExecutor.h  WakeUpEvent.cpp  WakeUpEvent.h  event_handler.cpp
src/async/libevent/: CMakeLists.txt  Event.cpp  Event.h  EventHandler.cpp  EventHandler.h  EventLoop.cpp  EventLoop.h  Executor.h  Reactor.cpp  Reactor.h  event.cpp  event_loop.cpp  reactor.cpp
src/async/libevent/detail/: EventStateToShort.h
src/async/test/: FutureTest.c++  LatchTest.c++  TaskQueueTest.c++  future_test.c++  latch_test.c++
src/core/: CMakeLists.txt  Executor.h  ExecutorPool.h  Kernel.cpp  Kernel.h  KernelUtils.h  LaunchableKernel.h  Service.h  Task.h  TaskQueue.h  ThreadLauncher.h  bootstrap.cpp  event_handler.cpp  execution_context.cpp  executor_pool.cpp  kernel.cpp  message_bus.cpp  netpoller.cpp  resumable.cpp  runtime.cpp  shard.cpp  signals.cpp  worker.cpp
src/core/epoll/: CMakeLists.txt  event.cpp  event_loop.cpp  reactor.cpp
src/core/libevent/: CMakeLists.txt  event.cpp  event_loop.cpp  reactor.cpp
src/core/memory/: CMakeLists.txt  memory.cpp
src/core/reactor/: CMakeLists.txt  epoll.cpp
src/core/test/: KernelTest.c++  TaskQueueTest.c++  Util.h  future_test.c++  kernel_test.c++  latch_test.c++  task_queue_test.c++
src/core/time/: CMakeLists.txt
src/core/time/test/: time_benchmark.c++
src/ext/: CMakeLists.txt  Chrono.h  Common.h  Configure.h  Error.h  Exception.h  Expected.h  FastCast.h  Future.h  Hash.h  Likely.h  Lock.h  Lockfree.h  Meta.h  Optional.h  OverloadRank.h  Pointer.h  Require.h  Scope.h  String.h  Test.h  Tuple.h  TypeTraits.h  Uuid.h  Variant.h
src/ext/test/: OptionTest.c++  TypeTraitsTest.c++  option_test.c++  tagged_ptr_test.c++  type_traits_test.c++
src/hw/: CMakeLists.txt  Hardware.cpp  Hardware.h  hardware.cpp
src/io/: AsyncChannel.h  Buffer.h  CMakeLists.txt  Channel.h  ChannelOptions.h  DataMessage.h  Endpoint.h  Enumerations.h  Error.h  IpAddress.h  Message.h  SocketOption.h  StreamBuffer.h  buffer.cpp  byte_buffer.cpp  byte_buffer_chain.cpp  byte_buffer_iovec_adapter.cpp  fragment.cpp  fragment_string.cpp  pollable_fd.cpp
src/io/buf/: CMakeLists.txt  buffer.cpp  chain.cpp  cursor.cpp  iterator.cpp
src/io/buf/test/: buf_test.c++  buffer_test.c++  chain_test.c++
src/io/detail/: SocketOps.h
src/io/net/: CMakeLists.txt  listener.cpp  socket.cpp  socket2.cpp  socket_option.cpp
src/io/net/test/: socket_test.c++  stream_server_socket_test.c++  tcp_socket_mock.h  udp_socket_mock.h  udp_socket_test.c++
src/io/pipeline/: CMakeLists.txt  Channel.h  Events.h  HandlerContext.h  Pipeline.cpp  Pipeline.h  PipelineHandler.cpp  PipelineHandler.h  PipelineHandler.hpp  PipelineHandler.inc  SimpleInboundPipelineHandler.h  Util.h  pipeline.cpp
src/io/pipeline/events/: All.h  ChannelClosed.h  ChannelDeregistered.h  ChannelError.h  ChannelException.h  ChannelOpened.h  ChannelRegistered.h  Event.h  MessageRead.h  MessageWrite.h
src/io/pipeline/test/: PipelineTest.c++  pipeline_test.c++
src/io/pipeline2/: CMakeLists.txt
src/io/pipeline2/test/: Pipeline2Test.c++  pipeline2_test.c++
src/io/pipes/: CMakeLists.txt
src/io/pipes/detail/: CMakeLists.txt  filter_context.cpp
src/io/pipes/test/: pipes_test.c++
src/io/proto/: CMakeLists.txt
src/io/proto/http/: CMakeLists.txt
src/io/proto/http/test/: http_decoder_test.c++
src/io/proto/http2/: CMakeLists.txt
src/io/proto/http2/test/: http2_decoder_test.c++
src/io/test/: StreamBufferTest.c++  TcpClientSocketIntegrationTest.c++  TcpSocketMock.h  buffer_test.c++  byte_blob_test.c++  byte_buffer_chain_test.c++  fragment_string_test.c++  fragment_test.c++  socket_ops_test.c++  stream_buffer_test.c++  tcp_client_socket_integration_test.c++  tcp_socket_mock.h
src/play/: CMakeLists.txt  asio.c++  context.cpp  main.cpp
src/test/: TestKernel.h  base.h  buffer_base.h  mock_kernel.h  test_kernel.h  util.h
src/tester/: CMakeLists.txt  server.h  tester.cpp
src/util/: CMakeLists.txt  DefaultInitializable.h  ObjectPool.h  Ownership.h  PolymorphicSpScRingBuffer.h  SpinLock.h
src/util/test/: ChunkTest.c++  PolymorphicSpScRingBufferTest.c++  polymorphic_sp_sc_ring_buffer_test.c++  result_test.c++
xi/: server_bootstrap.h
xi/async/: Async.h  Context.h  Engine.h  Event.h  EventHandler.h  Executor.h  ExecutorGroup.h  Future.h  Latch.h  Reactor.h  ReactorService.h  Task.h  TaskQueue.h  ThreadExecutor.h  async.h  async_defer.h  context.h  event.h  event_handler.h  future.h  latch.h  reactor.h  reactor_service.h  sharded_service.h  thread_executor.h
xi/core/: Executor.h  ExecutorCommon.h  ExecutorPool.h  Kernel.h  KernelUtils.h  LaunchableKernel.h  Service.h  Task.h  TaskQueue.h  ThreadLauncher.h  abstract_coordinator.h  abstract_worker.h  all.h  async.h  async_defer.h  basic_resumable.h  bootstrap.h  channel.h  configuration.h  coordinator.h  event.h  event_handler.h  execution_budget.h  execution_context.h  executor.h  executor_common.h  executor_pool.h  future.h  generic_resumable.h  kernel.h  kernel_utils.h  latch.h  launchable_kernel.h  message_bus.h  message_bus_impl.h  netpoller.h  reactor.h  resumable.h  resumable_builder.h  runtime.h  (+17 more)
xi/ext/: Atomic.h  Cast.h  Common.h  Configure.h  Error.h  Expected.h  FastCast.h  Lock.h  Meta.h  Optional.h  Pointer.h  Range.h  Require.h  Scope.h  String.h  Tuple.h  TypeTraits.h  align.h  atomic.h  barrier.h  cast.h  chrono.h  class_semantics.h  common.h  concept.h  configure.h  container.h  coroutine.h  error.h  expected.h  fast_cast.h  hash.h  intrusive.h  lock.h  meta.h  number.h  once.h  optional.h  overload_rank.h  pointer.h  (+9 more)
xi/hw/: Hardware.h  hardware.h
xi/io/: AsyncChannel.h  ByteRange.h  Channel.h  Endpoint.h  (+34 more)
(+169 files in other folders)
